Refactoring du code pour se rapprocher de la norme BEM, utilisation du nesting et des variables en CSS.

--- a/a-propos.html
+++ b/a-propos.html
@@ -15,15 +15,15 @@
 
 <body>
     <header>
-        <nav>
+        <nav class="navbar">
             <a href="index.html" title="Accueil" class="lien-icone">
                 <img class="logo" src="images/logo.png" alt="Logo Robbie Lens">
             </a>
-            <div class="liens-nav">
-                <a href="index.html">Accueil</a>
-                <a href="a-propos.html">À propos</a>
-                <a href="">Tarifs</a>
-                <a href="portfolio.html">Portfolio</a>
+            <div>
+                <a class="navbar__link navbar__link--purple" href="index.html">Accueil</a>
+                <a class="navbar__link" href="a-propos.html">À propos</a>
+                <a class="navbar__link" href="#tarifs">Tarifs</a>
+                <a class="navbar__link" href="portfolio.html">Portfolio</a>
             </div>
         </nav>
     </header>
@@ -47,7 +47,7 @@
             </div>
             <a class= "cta" href="portfolio.html">VOIR MON PORTFOLIO</a>
         </section>
-        <section class="section-tarifs">
+        <section class="section-tarifs" id="tarifs">
             <h2>Tarifs</h2>
             <table>
                 <tr>
