--- a/portfolio.html
+++ b/portfolio.html
@@ -13,15 +13,15 @@
 
 <body>
     <header>
-        <nav>
+        <nav class="navbar">
             <a href="index.html" title="Accueil" class="lien-icone">
                 <img class="logo" src="images/logo.png" alt="Logo Robbie Lens">
             </a>
             <div>
-                <a href="index.html">Accueil</a>
-                <a href="a-propos.html">À propos</a>
-                <a href="">Tarifs</a>
-                <a href="portfolio.html">Portfolio</a>
+                <a class="navbar__link navbar__link--purple" href="index.html">Accueil</a>
+                <a class="navbar__link" href="a-propos.html">À propos</a>
+                <a class="navbar__link" href="a-propos.html#tarifs">Tarifs</a>
+                <a class="navbar__link" href="portfolio.html">Portfolio</a>
             </div>
         </nav>
     </header>
@@ -29,71 +29,71 @@
         <section>
             <h1>Portfolio</h1>
         </section>
-        <section class="portfolio-section-photos">
-            <h2>Paysages</h2>
-            <div class="grid-paysages">
-                <a href="images/portfolio/paysage1.jpg" class="lien-conteneur-photo">
+        <section class="portfolio">
+            <h2 class="portfolio__title">Paysages</h2>
+            <div class="portfolio__grid portfolio__grid--paysage">
+                <a href="images/portfolio/paysage1.jpg" class="portfolio__item">
                     <img src="images/portfolio/paysage1.jpg" alt="Mont Aoraki - Nouvelle-Zélande" >
-                    <div class="photo-hover">Voir la photo</div>
+                    <div class="portfolio__hover">Voir la photo</div>
                 </a>
-                <a href="images/portfolio/paysage2.jpg" class="lien-conteneur-photo">
+                <a href="images/portfolio/paysage2.jpg" class="portfolio__item">
                     <img src="images/portfolio/paysage2.jpg" alt="Parc National d’Abel Tasman - Nouvelle-Zélande" >
-                    <div class="photo-hover">Voir la photo</div>
+                    <div class="portfolio__hover">Voir la photo</div>
                 </a>
-                <a href="images/portfolio/paysage3.jpg" class="lien-conteneur-photo">
+                <a href="images/portfolio/paysage3.jpg" class="portfolio__item">
                     <img src="images/portfolio/paysage3.jpg" alt="Lac Rotorua - Nouvelle-Zélande" >
-                    <div class="photo-hover">Voir la photo</div>
+                    <div class="portfolio__hover">Voir la photo</div>
                 </a>
-                <a href="images/portfolio/paysage4.jpg" class="lien-conteneur-photo">
+                <a href="images/portfolio/paysage4.jpg" class="portfolio__item">
                     <img src="images/portfolio/paysage4.jpg" alt="Lac Wanaka - Nouvelle-Zélande" >
-                    <div class="photo-hover">Voir la photo</div>
+                    <div class="portfolio__hover">Voir la photo</div>
                 </a>
-                <a href="images/portfolio/paysage5.jpg" class="lien-conteneur-photo">
+                <a href="images/portfolio/paysage5.jpg" class="portfolio__item">
                     <img src="images/portfolio/paysage5.jpg" alt="Mont Taranaki - Nouvelle-Zélande" >
-                    <div class="photo-hover">Voir la photo</div>
+                    <div class="portfolio__hover">Voir la photo</div>
                 </a>
-                <a href="images/portfolio/paysage6.jpg" class="lien-conteneur-photo">
+                <a href="images/portfolio/paysage6.jpg" class="portfolio__item">
                     <img src="images/portfolio/paysage6.jpg" alt="Milford Sound - Nouvelle-Zélande" >
-                    <div class="photo-hover">Voir la photo</div>
+                    <div class="portfolio__hover">Voir la photo</div>
                 </a>
-                <a href="images/portfolio/paysage7.jpg" class="lien-conteneur-photo">
+                <a href="images/portfolio/paysage7.jpg" class="portfolio__item">
                     <img src="images/portfolio/paysage7.jpg" alt="Twelve Apostle - Australie" >
-                    <div class="photo-hover">Voir la photo</div>
+                    <div class="portfolio__hover">Voir la photo</div>
                 </a>
-                <a href="images/portfolio/paysage8.jpg" class="lien-conteneur-photo">
+                <a href="images/portfolio/paysage8.jpg" class="portfolio__item">
                     <img src="images/portfolio/paysage8.jpg" alt="Wai-O-Tapu - Nouvelle-Zélande" >
-                    <div class="photo-hover">Voir la photo</div>
+                    <div class="portfolio__hover">Voir la photo</div>
                 </a>
-                <a href="images/portfolio/paysage9.jpg" class="lien-conteneur-photo">
+                <a href="images/portfolio/paysage9.jpg" class="portfolio__item">
                     <img src="images/portfolio/paysage9.jpg" alt="Mont Cook - Nouvelle Zélande" >
-                    <div class="photo-hover">Voir la photo</div>
+                    <div class="portfolio__hover">Voir la photo</div>
                 </a>
             </div>
-            <h2 class="titre-portraits">Portraits</h2>
-            <div class="grid-portraits">
-                <a href="images/portfolio/portrait1.jpg" class="lien-conteneur-photo">
+            <h2 class="portfolio__title titre-portraits">Portraits</h2>
+            <div class="portfolio__grid portfolio__grid--portraits">
+                <a href="images/portfolio/portrait1.jpg" class="portfolio__item">
                     <img src="images/portfolio/portrait1.jpg" alt="Portrait jeune femme 1" >
-                    <div class="photo-hover">Voir la photo</div>
+                    <div class="portfolio__hover">Voir la photo</div>
                 </a>
-                <a href="images/portfolio/portrait2.jpg" class="lien-conteneur-photo">
+                <a href="images/portfolio/portrait2.jpg" class="portfolio__item">
                     <img src="images/portfolio/portrait2.jpg" alt="Portrait jeune femme 2" >
-                    <div class="photo-hover">Voir la photo</div>
+                    <div class="portfolio__hover">Voir la photo</div>
                 </a>
-                <a href="images/portfolio/portrait3.jpg" class="lien-conteneur-photo">
+                <a href="images/portfolio/portrait3.jpg" class="portfolio__item">
                     <img src="images/portfolio/portrait3.jpg" alt="Portrait jeune homme 3" >
-                    <div class="photo-hover">Voir la photo</div>
+                    <div class="portfolio__hover">Voir la photo</div>
                 </a>
-                <a href="images/portfolio/portrait4.jpg" class="lien-conteneur-photo">
+                <a href="images/portfolio/portrait4.jpg" class="portfolio__item">
                     <img src="images/portfolio/portrait4.jpg" alt="Portrait jeune femme 4" >
-                    <div class="photo-hover">Voir la photo</div>
+                    <div class="portfolio__hover">Voir la photo</div>
                 </a>
-                <a href="images/portfolio/portrait5.jpg" class="lien-conteneur-photo">
+                <a href="images/portfolio/portrait5.jpg" class="portfolio__item">
                     <img src="images/portfolio/portrait5.jpg" alt="Portrait jeune femme 5" >
-                    <div class="photo-hover">Voir la photo</div>
+                    <div class="portfolio__hover">Voir la photo</div>
                 </a>
-                <a href="images/portfolio/portrait6.jpg" class="lien-conteneur-photo">
+                <a href="images/portfolio/portrait6.jpg" class="portfolio__item">
                     <img src="images/portfolio/portrait6.jpg" alt="Portrait jeune femme 6" >
-                    <div class="photo-hover">Voir la photo</div>
+                    <div class="portfolio__hover">Voir la photo</div>
                 </a>
 
             </div>
